--- a/style.css
+++ b/style.css
@@ -34,7 +34,10 @@ h2 {
   color: #005eb8;
   margin-top: 25px;
 }
-
+ul {
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
 h3 {
   color: #333;
   margin-top: 20px;
